# simIM

./: .gitignore  CMakeLists.txt  README.md  callbacks.xml  config.h.in  license.txt  plugin.cpp  plugin.h  simExtImage.lua  simIM.lua
cmake/modules/: FindSIMD.cmake
sourceCode/: plugin.cpp
tests/: bug-001-mem-leak.ttt  bug-read-rgb-write-bgr.ttt  runtest.sh  runtest.ttt  test-01.lua  test-add.lua  test-bwf-virtualCameraAdapter.ttt  test-clipline.lua  test-color-format.ttt  test-drawing.lua  test-hsv.lua  test-line.lua  test-line.ttt  test-lines.lua  test-markers-texture.ttt  test-markers.ttt  test-opencv-video-capture.ttt  test-read-resize-copy-write.lua  test-set-get.lua  test-text.lua  test-vision-sensor.ttt  test-writeToTexture.ttt
